# 2d-to-3d-low-poly

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ideas.md  logs.md  plan.md  task.md  vcpkg.json
src/: app.cpp  app.h  depth.cpp  depth.h  main.cpp  pipeline.cpp  pipeline.h  viewport.cpp  viewport.h
tests/: test_app.cpp
